Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4699

bad ERR_PTR() use

XMLWordPrintable

    • 3
    • 12922

      /root/lustre-release/lustre/lmv/lmv_obd.c:1796:10: warning: ERR_PTR cast
                      RETURN((void *)oinfo);
                      ~~~~~~~^~~~~~~~~~~~~~
      
      /root/lustre-release/lustre/lod/lproc_lod.c:321:8: warning: ERR_PTR passed
                      rc = next->ld_ops->ldo_process_config(NULL, next, lcfg);
                           ^                                            ~~~~
      
      /root/lustre-release/lustre/lod/lproc_lod.c:326:2: warning: ERR_PTR passed
              lustre_cfg_free(lcfg);
              ^               ~~~~
      
      /root/lustre-release/lustre/lov/lov_io.c:203:26: warning: ERR_PTR passed
                      result = cl_io_sub_init(sub->sub_env, sub_io,
                               ^              ~~~~~~~~~~~~
      
      /root/lustre-release/lustre/lov/lov_io.c:731:9: warning: ERR_PTR dereference
              sub->sub_io->u.ci_fault.ft_nob = fio->ft_nob;
              ^~~~~~~~~~~
      
      /root/lustre-release/lustre/lov/lov_io.c:732:9: warning: ERR_PTR passed
              lov_sub_put(sub);
              ^           ~~~
      
      /root/lustre-release/lustre/lov/lov_lock.c:91:34: warning: ERR_PTR cast
                              subenv = (void*)sub;
                                       ^~~~~~~~~~
      
      /root/lustre-release/lustre/lov/lov_lock.c:173:14: warning: ERR_PTR cast
                              sublock = (void *)subenv;
                                        ^~~~~~~~~~~~~~
      
      /root/lustre-release/lustre/lov/lov_object.c:121:16: warning: ERR_PTR passed
              RETURN(lu2cl(o));
              ~~~~~~~^~~~~~~~~
      
      /root/lustre-release/lustre/lov/lov_object.c:274:14: warning: ERR_PTR passed
                                      int sz = lov_page_slice_fixup(lov, stripe);
                                               ^                         ~~~~~~
      

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: