libcfs/include/libcfs/posix/libcfs.h
@@ -109,11 +109,6 @@
 # define do_gettimeofday(tv) gettimeofday(tv, NULL);
 typedef unsigned long long cfs_cycles_t;
 
-#define IS_ERR(a) ((unsigned long)(a) > (unsigned long)-1000L)
-#define IS_ERR_VALUE(a) (IS_ERR(a))
-#define PTR_ERR(a) ((long)(a))
-#define ERR_PTR(a) ((void*)((long)(a)))
-
 /* this goes in posix-fs.h */
 #include <sys/mount.h>
 
